--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   permission_handler: ^12.0.1
   nearby_connections: ^4.3.0
   device_info_plus: ^12.2.0
+  uuid: ^4.3.0
 
 dev_dependencies:
   flutter_test:
