--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
   permission_handler: ^12.0.1
   nearby_connections: ^4.3.0
+  synchronized: ^3.1.0
+  provider: ^6.1.5+1
   device_info_plus: ^12.2.0
   uuid: ^4.3.0
 
